--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,9 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+# My
+
+SEA.P/Scripts
+SEA.P/Web/Content/script/Архив
+SEA.P/Web/Content/html/Архив
