--- a/SEA.P/packages.config
+++ b/SEA.P/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="3.6.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.2" targetFramework="net462" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net462" />
