--- a/.gitignore
+++ b/.gitignore
@@ -237,8 +237,8 @@ _Pvt_Extensions
 .fake/
 
 # My
-
 SEA.P/Scripts
 SEA.P/Web/Content/script/Архив
 SEA.P/Web/Content/html/Архив
 .vscode
+SEA.P/Web/Content/Архив
