--- a/SEA.P/SEA.P.csproj
+++ b/SEA.P/SEA.P.csproj
@@ -197,8 +197,6 @@
     <EmbeddedResource Include="Web\Content\data\lang_sea-ui_ru_info.json" />
     <EmbeddedResource Include="Web\Content\data\lang_sea-indicators_en_dictionary.json" />
     <EmbeddedResource Include="Web\Content\data\lang_sea-indicators_ru_dictionary.json" />
-    <None Include="Scripts\jquery-3.6.0.min.map" />
-    <None Include="Scripts\jquery-3.6.0.slim.min.map" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Web\Content\html\index.html" />
@@ -209,20 +207,19 @@
     <EmbeddedResource Include="Web\Content\img\lib-help-min.svg" />
     <EmbeddedResource Include="Web\Content\img\lib-help.svg" />
     <EmbeddedResource Include="Web\Content\img\status-min.svg" />
-    <EmbeddedResource Include="Web\Content\script\jquery-1.12.3.js" />
-    <EmbeddedResource Include="Web\Content\script\jquery-1.12.3.min.js" />
-    <EmbeddedResource Include="Web\Content\script\jquery-ui-1.11.4.min.js" />
+    <EmbeddedResource Include="Web\Content\script\jquery-3.6.0.js" />
+    <EmbeddedResource Include="Web\Content\script\jquery.ui.touch-punch.js" />
     <EmbeddedResource Include="Web\Content\script\jquery-ui.js" />
     <EmbeddedResource Include="Web\Content\script\jquery-ui.plugins.js" />
     <EmbeddedResource Include="Web\Content\script\jquery.plugins.js" />
-    <EmbeddedResource Include="Web\Content\script\jquery.signalR-2.2.0.min.js" />
-    <EmbeddedResource Include="Web\Content\script\sea-controls.js" />
+    <EmbeddedResource Include="Web\Content\script\jquery.signalR-2.4.2.js" />
+    <EmbeddedResource Include="Web\Content\script\sea-controls-new.js" />
     <EmbeddedResource Include="Web\Content\script\sea-core.js" />
     <EmbeddedResource Include="Web\Content\script\sea-ui.js" />
     <EmbeddedResource Include="Web\favicon.ico" />
     <EmbeddedResource Include="Web\Content\css\global.css" />
-    <EmbeddedResource Include="Web\Content\css\sea-controls.css" />
-    <EmbeddedResource Include="Web\Content\css\sea-ui.css" />
+    <EmbeddedResource Include="Web\Content\css\sea-controls-new.css" />
+    <EmbeddedResource Include="Web\Content\css\sea-ui-new.css" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Web\Content\font\" />
@@ -240,16 +237,6 @@
     <Content Include="lib\Microsoft.AspNet.SignalR.SystemWeb.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.6.4.js" />
-    <Content Include="Scripts\jquery-1.6.4.min.js" />
-    <Content Include="Scripts\jquery-3.6.0.intellisense.js" />
-    <Content Include="Scripts\jquery-3.6.0.js" />
-    <Content Include="Scripts\jquery-3.6.0.min.js" />
-    <Content Include="Scripts\jquery-3.6.0.slim.js" />
-    <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
-    <Content Include="Scripts\jquery.signalR-2.4.2.js" />
-    <Content Include="Scripts\jquery.signalR-2.4.2.min.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
